# rustex

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  analysis.md  benchmark-config.toml  llm-config.toml  test_complexity.rs
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmarks.yml  ci.yml  dependencies.yml  deploy.yml  release.yml  security.yml
config-templates/: ci-cd-config.toml
crates/rustex-cli/: Cargo.toml
crates/rustex-cli/src/: main.rs
crates/rustex-core/: Cargo.toml
crates/rustex-core/benches/: README.md  benchmarks.rs
crates/rustex-core/src/: ast_data.rs  complexity.rs  config.rs  errors.rs  extractor.rs  lib.rs  test_fixtures.rs  visitors.rs
crates/rustex-core/tests/: README.md  basic_property_tests.rs  complexity_properties.proptest-regressions  complexity_properties.rs  integration_with_fixtures.rs  property_tests.proptest-regressions  property_tests.rs  test_ast_data.rs  test_config.rs  test_config_toml.rs  test_cross_references.rs  test_errors.rs  test_extractor.rs  test_fixtures_demo.rs  test_hierarchy.rs  test_integration.rs  test_utils.rs  test_visitors.rs
crates/rustex-db/: Cargo.toml  README.md
crates/rustex-db/migrations/: 001_initial_schema.sql
crates/rustex-db/src/: connection.rs  error.rs  graph.rs  graph_storage.rs  lib.rs  migrations.rs  query.rs  schema.rs  storage.rs  traversal.rs
crates/rustex-formats/: Cargo.toml  rag-large-chunks.json  rag-small-chunks.json
crates/rustex-formats/src/: formatters.rs  lib.rs  rag.rs
crates/rustex-plugins/: Cargo.toml
crates/rustex-plugins/src/: lib.rs  plugin.rs
crates/rustex-plugins/src/builtin/: complexity.rs  doc_enhancer.rs  llm_optimizer.rs  metrics.rs  mod.rs
crates/rustex-plugins/src/core/: context.rs  errors.rs  manager.rs  mod.rs  plugin.rs
crates/rustex-plugins/src/utils/: helpers.rs  mod.rs
docs/: api-reference.md  ci-cd.md  cli_setup.md  configuration-reference.md  core_plan.md  getting-started.md  plugin-development.md  project_plan.md  project_prd.txt  rag-formats.md  tutorial.md  user-guide.md
examples/: README.md  basic_usage.rs  cli_examples.sh  code_analyzer.rs  documentation_generator.rs  llm_data_prep.rs  rag_output_demo.rs
examples/configs/: documentation.toml  llm-training.toml
performance/: dashboard.html
scripts/: run_benchmarks.sh
