[workspace]
resolver = "2"
members = [
    "crates/rustex-core",
    "crates/rustex-cli", 
    "crates/rustex-plugins",
    "crates/rustex-formats",
    "crates/rustex-db"
]

[workspace.dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
clap = { version = "4.0", features = ["derive"] }
quote = "1.0"
walkdir = "2.0"
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2.0"
indicatif = "0.17"
proc-macro2 = "1.0"
thiserror = "1.0"
toml = "0.8"
dirs = "5.0"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.0"
# Database dependencies
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json", "uuid", "chrono"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
petgraph = "0.6"
md5 = "0.7"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]