[package]
name = "rustex-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for Rust AST extraction"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/rustex"
readme = "README.md"
keywords = ["rust", "ast", "cli", "parser"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "rustex"
path = "src/main.rs"

[dependencies]
rustex-core = { path = "../rustex-core" }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"