[package]
name = "rustex-core"
version = "0.1.0"
edition = "2021"
description = "Core AST extraction library for Rust projects"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/rustex"
documentation = "https://docs.rs/rustex-core"
readme = "README.md"
keywords = ["rust", "ast", "parser", "llm", "rag"]
categories = ["parsing", "development-tools"]

[dependencies]
syn = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
quote = { workspace = true }
walkdir = { workspace = true }
chrono = { workspace = true }
proc-macro2 = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
criterion = { workspace = true }
colored = { workspace = true }
rmp-serde = "1.0"
async-trait = "0.1"
rand = "0.8"
log = "0.4"
paste = "1.0"
futures = "0.3"
proptest = "1.0"
quickcheck = "1.0"

[[bench]]
name = "benchmarks"
harness = false

[[example]]
name = "basic_usage"
path = "../../examples/basic_usage.rs"

[[example]]
name = "documentation_generator"
path = "../../examples/documentation_generator.rs"

[[example]]
name = "code_analyzer" 
path = "../../examples/code_analyzer.rs"

[[example]]
name = "llm_data_prep"
path = "../../examples/llm_data_prep.rs"