[package]
name = "rustex-db"
version = "0.1.0"
edition = "2021"
authors = ["RustEx Team"]
license = "MIT OR Apache-2.0"
description = "Database layer for RustEx AST storage and graph traversal"
homepage = "https://github.com/your-username/rustex"
repository = "https://github.com/your-username/rustex"
readme = "README.md"
keywords = ["rust", "ast", "database", "postgresql", "graph"]
categories = ["database", "development-tools"]

[dependencies]
# Database
sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Graph algorithms
petgraph = { workspace = true, optional = true }

# Hash function for checksums
md5 = { workspace = true }

# RustEx dependencies
rustex-core = { path = "../rustex-core" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
testcontainers = "0.15"

[features]
default = ["migrations", "graph-algorithms"]
migrations = []
graph-algorithms = ["dep:petgraph"]