[package]
name = "rustex-formats"
version = "0.1.0"
edition = "2021"
description = "Output formatters for rustex AST extractor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/rustex"
readme = "README.md"
keywords = ["rust", "ast", "formatters", "output"]
categories = ["development-tools"]

[dependencies]
rustex-core = { path = "../rustex-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
rmp-serde = "1.1"
base64 = "0.21"

[dev-dependencies]
colored = { workspace = true }

[[example]]
name = "rag_output_demo"
path = "../../examples/rag_output_demo.rs"